Bug 96135 - Crash : When Field Format Window Close
Summary: Crash : When Field Format Window Close
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
5.1.0.0.beta1
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0 target:5.1.0.1
Keywords: haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2015-11-29 14:39 UTC by sawakaze
Modified: 2016-10-25 19:12 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (9.10 KB, text/plain)
2015-11-29 20:18 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sawakaze 2015-11-29 14:39:08 UTC

    
Comment 1 sawakaze 2015-11-29 14:44:27 UTC
Hi,

After following steps, LibreOffice Beta  Base was Crashed.
(1) Open Table Design
(2) Press Format Example Detail button[...].
--> Open "Field Format Window"
(3) Press OK or Cancel
--> Crash!

I confirmed following version
Version: 5.1.0.0.beta1+
Build ID: 2aca701f3289fef35cb1f95a32fffdc466929823
Threads 4; Ver: 3.16; Render: default; 

TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:libreoffice-5-1, Time: 2015-11-29_00:26:40
Locale: en-US (C)

Regards
Comment 2 Robert Großkopf 2015-11-29 16:53:43 UTC
Could confirm this bug with Version: 5.1.0.0.beta1-buildfix1
Build-ID: 13010a13177025f633c9b85adcb3edf6920e44e3, OpenSUSE 64bit rpm Linux.
Comment 3 Julien Nabet 2015-11-29 20:18:28 UTC
Created attachment 120886 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated 2 days ago, I could reproduce this.
Comment 4 Julien Nabet 2015-11-29 20:24:18 UTC
Noel: after having taken a look to the bt, I noticed this commit http://cgit.freedesktop.org/libreoffice/core/commit/?id=db17d3c17c40d6b0e92392cf3c6e343d1d17b771, any idea if it could be related?
Comment 5 Julien Nabet 2015-11-29 20:33:12 UTC
I confirm it's due to the quoted commit. I tested by reverting locally just the dbaccess/source/ui/misc/UITools.cxx part.
Comment 6 Commit Notification 2015-11-30 08:12:39 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2ba8476f650400c5285041e956d70d2c1c0bcf76

tdf#96135 - Crash : When Field Format Window Close

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2015-11-30 08:21:55 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0309043fb3521923821edb4fa9a7524eb7062e92&h=libreoffice-5-1

tdf#96135 - Crash : When Field Format Window Close

It will be available in 5.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.