tdf#96135 - Crash : When Field Format Window Close

regression from commit db17d3c17c40d6b0e92392cf3c6e343d1d17b771
"new loplugin: memoryvar"

Change-Id: Id37226646a561579a375110bf684140d1fa8cb92
(cherry picked from commit 2ba8476f650400c5285041e956d70d2c1c0bcf76)